RESOLVED FIXED 280171
REGRESSION(193933@main): The initial player current time should be 0, not invalidTime()
https://bugs.webkit.org/show_bug.cgi?id=280171
Summary REGRESSION(193933@main): The initial player current time should be 0, not inv...
Philippe Normand
Reported 2024-09-23 01:52:25 PDT
https://html.spec.whatwg.org/multipage/media.html#loading-the-media-resource We return invalidTime() until we have a pipeline, this wasn't the case before 193933@main.
Attachments
Philippe Normand
Comment 1 2024-09-23 01:57:54 PDT
EWS
Comment 2 2024-09-24 01:49:48 PDT
Committed 284149@main (319f86e9eb29): <https://commits.webkit.org/284149@main> Reviewed commits have been landed. Closing PR #34075 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-24 01:50:16 PDT
Note You need to log in before you can comment on or make changes to this bug.