REGRESSION(193933@main): The initial player current time should be 0, not invalidTime() https://bugs.webkit.org/show_bug.cgi?id=280171

Reviewed by Xabier Rodriguez-Calvar.

According to https://html.spec.whatwg.org/multipage/media.html#loading-the-media-resource step 7.8,
Set the current playback position to 0.

MediaTime::invalidTime() not being a valid time, the initial position reported by the media element
was NaN.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::currentTime const):

Canonical link: https://commits.webkit.org/284149@main